#
# A library for reading and writing backlog files.
#
[package]
name        = "bklog"
version     = "0.1.0"
edition     = "2021"
description = "WAL-like corruption resilient storage for IoT local backlogging"
license     = "MIT"
authors     = ["Leonhard Weber <leonhard.weber@voipir.cl>"]

[dependencies]
crc       = {version="3.0.1"}
serde     = {version="1.0.130", features=["derive"]}
bincode   = {version="1.3.3"}
tracing   = {version="0.1.27"}
thiserror = {version="1.0.30"}

[dev-dependencies]
tempfile = {version="3.2.0"}
